@@ -463,6 +463,9 @@
       \item \code{$<-.data.frame} messed with the class attribute,
       breaking any S4 subclass.  The S4 \code{data.frame} class now has its own
       \code{$<-} method, and turns dispatch on for this primitive.
+
+      \item a change to R_tryEval had broken error messages in method
+      selection; the error message is now printed.
     }
   }
 }
